--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body style="background-color: lightblue;">
     <main class="container" id="contenedor">
-      <h1 id="tittle";>Productos</h1>
+      <h1>Productos</h1>
+      </br>
       <div id ="productos" style="display:flex; flex-wrap:wrap; justify-content:space-between; margin-bottom:2rem;"></div>
     </main>
     <script src="./js/main.js"></script>
